test/corpus/manpath_map.txt
===
simple
===

MANPATH_MAP /path/element /manpath/element

---

(file
	(manpath_map
		path_element: (path)
		manpath_element: (path)
	)
)

===
with tabs as spaces
===

MANPATH_MAP		/path/element		/manpath/element

---

(file
	(manpath_map
		path_element: (path)
		manpath_element: (path)
	)
)
